# babel_sandbox

./: .clang_complete  .dir-locals.el  .gitignore  .gitmodules  2020-04-12.org  20200412134256-literate_programming.org  CMakeLists.txt  babel_sandbox.org  foo.cpp  foo.h  requirements.txt  tcr.py
.github/workflows/: ccpp.yml
cmake/Modules/: BDD.cmake
emacs_docker_gdb_issue/: CMakeLists.txt
includes/: my_library.h
tests/: CMakeLists.txt  test_foo.cpp
