project(ageCalculator)

#if(TARGET GTest::GTest)
add_executable(ageCalculator ${PROJECT_SOURCE_DIR}/features/step_definitions/ageCalculator)
#find_package(GMock REQUIRED)
#target_link_libraries(name GTest::GTest)
# set(GMOCK_ROOT "${CMAKE_CURRENT_BINARY_DIR}/gmock")
# find_package(GMock REQUIRED)
#target_link_libraries(ageCalculator /libs/libcucumber-cpp.a)
#target_link_libraries(ageCalculator /home/rcl/cucumber-cpp/build/gmock/src/gtest/build/libgtest.a)
#set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_SYSTEM ON)
#set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost 1.69.0 COMPONENTS /usr/local/include/boost)

if(Boost_FOUND)
  include_directories(${Boost_INCLUDE_DIRS})
  target_link_libraries(ageCalculator ${Boost_LIBRARIES})
endif()
add_library( GTest SHARED IMPORTED )
# You can define two import-locations: one for debug and one for release.
set_target_properties( GTest PROPERTIES IMPORTED_LOCATION /home/rcl/cucumber-cpp/build/gmock/src/gtest/build/libgtest.a)
target_link_libraries(ageCalculator PRIVATE cucumber-cpp GTest)
add_test(NAME ageCalculatorTest COMMAND ${PROJECT_SOURCE_DIR}/ageTest.sh)
#endif()
